☑️ ADD: Fix map on small screens

--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -1,6 +1,6 @@
 .main {
 	grid-column: 1 / -1;
-	height: max(60rem, 100%);
+	height: max(40rem, 100%);
 }
 
 .data {
